--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -254,11 +254,11 @@ div[data-media-provider] video {
 }
 
 /* 移动端隐藏弹幕配置按钮 */
-/* @media (max-width: 1080px), (hover: none) {
+@media (max-width: 1080px), (hover: none) {
   .artplayer-plugin-danmuku .apd-config {
     display: none !important;
   }
-} */
+}
 
 /* 修复桌面端弹幕配置弹窗hover不稳定问题 */
 @media (min-width: 1081px) and (hover: hover) {
